--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "wouter": "^3.1.2"
